Complete Fettucine Caprese recipe
Add unordered list of ingredients and ordered list of directions.

--- a/recipes/fettucinecaprese.html
+++ b/recipes/fettucinecaprese.html
@@ -7,6 +7,18 @@
 </head>
 <body>
     <h1>Fettucine Caprese</h1>
-    <img src="/home/joyswork/repos/odin-recipes/images" height="250" width="250" alt="Close-up photo of bowl of fettucine in a pan-roasted tomato gravy with chiffonade basil, fresh mozzarella pearls, and cracked black pepper">
+    <img src="/home/joyswork/repos/odin-recipes/images" height="250" width="250" 
+        alt="Close-up photo of bowl of fettucine in a pan-roasted tomato gravy with chiffonade basil, 
+            fresh mozzarella pearls, and cracked black pepper">
+    <h3>Ingredients</h3>
+        <ul><li>1 serving fettucine</li><li>1/2 T butter</li><li>4 campari tomatoes</li><li>2 T balsamic vinegar (white balsamic is nice)</li><li>T olive oil</li>
+            <li>generous handful fresh basil</li><li>1 clove garlic, crushed</li><li>2 servings fresh mozzarella pearls</li><li>fresh-cracked black pepper and salt to taste</li></ul>
+    <h3>Directions</h3>
+        <ol><li>Heat castiron pan to high.</li><li>Wash campari tomatoes and slice into quarters.</li><li>Place tomatoes skin down in castiron and allow them to blister.</li>
+            <li>Remove pan from heat and replace with a pot of water and the butter.</li><li>When the water boils, add the fettucine. Boil fettucine until nearly al dente, 
+                with a little of the water still in the pot, turn off heat, but keep the pot on the burner.<li>Add the garlic, salt and black pepper to the tomatoes, and 
+                deglaze the pan by adding the balsamic vinegar. Spatula the contents of the pan into the pot of fettucine, stirring to combine well.</li><li>Chiffonade the basil
+                and fold the basil and mozzarella pearls into the contents of the pot.</li><li>Serve in your favorite size bowl.</li><li>Enjoy!</li></ol>
+
 </body>
 </html>
