Modify index edit fettucine caprese recipe
Add Blueberried Pancakes to index and practice applying <p> so that recipes are listed vertically. Edit fettucine caprese recipe after reorganizing folders for the image.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/fettucinecaprese.html">Fettucine Caprese</a>
-    
+    <a href="recipes/fettucinecaprese.html">Fettucine Caprese</a><p></p>
+    <a href="recipes/blueberriedpancakes.html">Blueberried Pancakes</a>
 </body>
 </html>
