--- a/recipes/fettucinecaprese.html
+++ b/recipes/fettucinecaprese.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Fettucine Caprese</h1>
-    <img src="/home/joyswork/repos/odin-recipes/images" height="250" width="250" 
+    <img src="/home/joyswork/repos/odin-recipes/images/fettucinecaprese.jpeg" height="250" width="250" 
         alt="Close-up photo of bowl of fettucine in a pan-roasted tomato gravy with chiffonade basil, 
             fresh mozzarella pearls, and cracked black pepper">
     <h3>Ingredients</h3>
