--- a/recipes/blueberriedpancakes.html
+++ b/recipes/blueberriedpancakes.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <style>
+        h1{
+          color: blue;
+          text-align: center;
+        } 
+        </style>
     <title>Blueberried Pancakes</title>
 </head>
 <body>
-    <h1>Blueberried Pancakes</h1>
+    <h1>Internal-styled Blueberried Pancakes</h1>
     <img src="/home/joyswork/repos/odin-recipes/images/blueberriedpancakes.jpeg" height="300" width="300" 
         alt="Close-up photo of stack of 4 pancakes topped with blueberry sauce dripping over the top and sides">
     <h3>Ingredients</h3>
-    
     <h3>Directions</h3>
 </body>
 </html>
