--- a/recipes/blueberriedpancakes.html
+++ b/recipes/blueberriedpancakes.html
@@ -16,7 +16,7 @@
     <h1>Internal-styled Blueberried Pancakes</h1>
     <img src="/home/joyswork/repos/odin-recipes/images/blueberriedpancakes.jpeg" height="300" width="300" 
         alt="Close-up photo of stack of 4 pancakes topped with blueberry sauce dripping over the top and sides">
-    <h3>Ingredients</h3>
+    <h3 style="color:yellow;">Inline-styled Ingredients</h3>
     <h3>Directions</h3>
 </body>
 </html>
