Add Externally-styled Button
Edit styles.css and index.html to make Blueberried Pancakes link a button, styled externally. Move files so html and css are in the same folder. Success :D

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/fettucinecaprese.html">Fettucine Caprese</a><p></p>
-    <a target="_blank" class="bp-btn" href="recipes/blueberriedpancakes.html">Externally-styled Blueberried Pancakes</a>
+    <a target="_blank" class="bp-but" href="recipes/blueberriedpancakes.html">Blueberried Pancakes</a>
 </body>
 </html>
