Internal style works
I can change the h1 color in html; still not sure why it's not working externally.

--- a/recipes/fettucinecaprese.html
+++ b/recipes/fettucinecaprese.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Fettucine Caprese</h1>
+    <style>
+        h1{
+            color:darkgreen;
+        }
+    </style>
     <img src="/home/joyswork/repos/odin-recipes/images/fettucinecaprese.jpeg" height="250" width="250" 
         alt="Close-up photo of bowl of fettucine in a pan-roasted tomato gravy with chiffonade basil, 
             fresh mozzarella pearls, and cracked black pepper">
