Add snippet to index.html
Learn it works there-why isn't my fettucinecaprese.html talking to style.css?

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Odin Recipes</h1>
     <a href="recipes/fettucinecaprese.html">Fettucine Caprese</a><p></p>
     <a target="_blank" class="bp-btn" href="recipes/blueberriedpancakes.html">Externally-styled Blueberried Pancakes</a>
+    <h2 class="recipename">Fettucine Caprese</h2>
 </body>
 </html>
